--- a/car_animation/index.html
+++ b/car_animation/index.html
@@ -7,7 +7,7 @@
     <style>
         .track{
             margin-top: 50px;
-            background-color: greenyellow;
+            background: linear-gradient(to bottom, rgb(34, 76, 116),rgb(73, 127, 189),rgb(114, 174, 214), yellowgreen, green);
         }
         .car{
             display: grid;
