--- a/burger/index.html
+++ b/burger/index.html
@@ -18,6 +18,7 @@
             <div class="blog">Get Blog</div>
             <button class="sign">Sign In</button>
             <!-- Home | About Us | Delights | Recipes | Locations | Contact | Get Blog | Sign In -->
+            <div class="menu-toggle">&#9776;</div> <!-- Hamburger icon -->
         </nav>
         <div class="homecontent">
             <h1>Burgers to Believe In.</h1>
@@ -26,7 +27,7 @@
                 <button class="discover">Discover More</button>
                 <button class="order">Order Now</button>
             </div>
-            <img src="https://png.pngtree.com/png-clipart/20230825/original/pngtree-5-star-rating-review-satisfaction-picture-image_8726145.png" alt="Ratings" width="200px">
+            <img src="https://png.pngtree.com/png-clipart/20230825/original/pngtree-5-star-rating-review-satisfaction-picture-image_8726145.png" alt="Ratings">
         </div>
     </div>
     
