--- a/cookies/index.html
+++ b/cookies/index.html
@@ -7,22 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <div class="logo">Novan Cookies & More</div>
-        <div class="About">About</div>
-        <div class="Contact">Contact</div>
-        <div class="Specials">Specials</div>
-    </nav>
-    <section class="home">
-        <div class="text">
-            <h1>Choose Your Best </h1>
-            <h1 class="flavor">Flavor<img src="https://images.vexels.com/media/users/3/154521/isolated/preview/91e82d562c3e2103a57371c8bb88594a-fresh-circle-sign.png" alt="Fresh"></h1>
-            <h3>Delectable croissant One bite and you’ll be in</h3>
-            <h3 class="heaven">PASTRY HEAVEN</h3>
+    <div class="main">
+        <nav>
+            <div class="logo">Novan Cookies & More</div>
+            <div class="links">
+                <div class="About">About</div>
+                <div class="Contact">Contact</div>
+                <div class="Specials">Specials</div>
+            </div>
+        </nav>
+        <div class="home">
+            <div class="text">
+                <span>Choose Your Best</span>
+                <span class="flavor">Flavor <sup><img src="https://images.vexels.com/media/users/3/154521/isolated/preview/91e82d562c3e2103a57371c8bb88594a-fresh-circle-sign.png" alt="Fresh"></sup></span>
+                <span class="sub">Delectable croissant One bite and you’ll be in</span>
+                <span class="heaven sub">PASTRY HEAVEN</span>
+            </div>
+            <div class="illus">
+                <img src="https://png.pngtree.com/png-clipart/20240314/original/pngtree-croissant-green-tea-with-almond-png-image_14583068.png" alt="crossaint picture">
+                <!-- <span>fvrvrv</span>
+                <h1>vvbtbtevrvrvrvrv</h1> -->
+            </div>
         </div>
-        <div class="illus">
-            <img src="https://png.pngtree.com/png-clipart/20240314/original/pngtree-croissant-green-tea-with-almond-png-image_14583068.png" alt="croissant image">
-        </div>
-    </section>
+    </div>
+    
 </body>
 </html>
