--- a/vr_landing/index.html
+++ b/vr_landing/index.html
@@ -19,8 +19,9 @@
                 <div class="log">Login</div>
                 <div class="pro">Become a Pro</div>
             </div>
+            <div class="menu-toggle">&#9776;</div> <!-- Hamburger icon -->
         </div>
-        <div class="grid">
+        <div class="flex-container">
             <div class="lg">
                 <h1>Think</h1>
                 <h1>Forward</h1>
@@ -32,17 +33,16 @@
                 <div class="img1"><div class="img2">
                     <img src="https://static.vecteezy.com/system/resources/previews/047/311/546/non_2x/cute-cat-robot-3d-illustration-free-png.png" alt="cat">
                 </div></div>
-                
-            </div>
-            <div class="rg">
-                <h3 class="new">NEW</h3>
-                <h2>VR Mobile</h2>
-                <h2>360<span>&#176;</span></h2>
-                <h1>9.5</h1>
-                <h3>Enroll today</h3>
-                <div class="prevnex">
-                    <div class="prev"></div>
-                    <div class="next"><img src="https://icons.veryicon.com/png/o/miscellaneous/two-color-webpage-small-icon/right-arrow-37.png" alt=""></div>
+                <div class="rg">
+                    <h3 class="new">NEW</h3>
+                    <h2>VR Mobile</h2>
+                    <h2>360<span>&#176;</span></h2>
+                    <h1>9.5</h1>
+                    <h3>Enroll today</h3>
+                    <div class="prevnex">
+                        <div class="prev"></div>
+                        <div class="next"><img src="https://icons.veryicon.com/png/o/miscellaneous/two-color-webpage-small-icon/right-arrow-37.png" alt=""></div>
+                    </div>
                 </div>
             </div>
         </div>
