--- a/Alex_Portfolio/index.html
+++ b/Alex_Portfolio/index.html
@@ -18,6 +18,7 @@
                 <div>Experience</div>
                 <div>Contact</div>
             </div>
+            <div class="menu-toggle">&#9776;</div> <!-- Hamburger icon -->
         </nav>
         <div class="home">
             <div class="imghome"></div>
