--- a/Ape_NFT_black/Index.html
+++ b/Ape_NFT_black/Index.html
@@ -284,7 +284,7 @@
     </div>
     <div class="Sell" id="sell">
       <p class="sell-p-head">TO BE CREATOR+</p>
-      <h2 class="sell-h2-head">Create amd Sell</h2>
+      <h2 class="sell-h2-head">Create and Sell</h2>
       <h2 class="sell-h2-head">Your NFTs</h2>
       <h2 class="sell-h2-head">Click the cards to reveal ⤵</h2>
       <div class="sell-circle"></div>
