--- a/aurelia/index.html
+++ b/aurelia/index.html
@@ -19,11 +19,11 @@
             <div class="menu-toggle">&#9776;</div> <!-- Hamburger icon -->
         </nav>
         <div class="home">
-            <div class="band"><h1> - DESIGNS THAT SPEAK LOUD - LOAD BOLD - KEEP HOOKED - DESIGNS THAT SPEAK LOUD - LOAD BOLD - KEEP HOOKED - </h1></div>
+            <div class="band"><h1> - DESIGNS THAT SPEAK LOUD - LOAD BOLD - KEEP HOOKED - DESIGNS THAT SPEAK LOUD - LOAD BOLD - KEEP HOOKED - DESIGNS THAT SPEAK LOUD - LOAD BOLD - KEEP HOOKED - DESIGNS THAT SPEAK LOUD - LOAD BOLD - KEEP HOOKED - DESIGNS THAT SPEAK LOUD - LOAD BOLD - KEEP HOOKED - DESIGNS THAT SPEAK LOUD - LOAD BOLD -   </h1></div>
             <div class="grid">
                 <div class="leftgrid">
                     <div class="review">
-                        <img src="profile.png" alt="Prolfile pictures">
+                        <img src="https://pastatic.picsart.com/cms-pastatic/cffcd56e-5317-4adb-b2a2-8e8ab27c0194.png" alt="Prolfile pictures">
                         <p>Trusted by 500+ customer worldwide</p>
                     </div>
                     <div class="stats">
